# DigitalTwinSimulation

./: .gitignore  DESIGN.md  GRIP_SYSTEM_PLAN.md  PLAN.md  README.md  checklist.md  context-notes.md  pyproject.toml
.bkit/runtime/: agent-state.json
.bkit/state/: memory.json  pdca-status.json
.claude/: settings.json
src/app/: blender_io.py  pipeline.py  session.py
src/blender_core/: grip_ops.py  hand_build.py  runner.py  socket_addon.py
src/cli/: dtsim.py  dyna2stl.py
src/core/: result.py
src/dyna_io/: boundary.py  classify.py  faces.py  model.py  parser.py  rewrite.py  stl.py  surface.py
src/hand/: loader.py  procedural.py  types.py
src/mcp_server/: server.py
src/morph/: driver.py  edit.py  laplacian.py  quality.py  rbf.py
tests/: conftest.py  test_aspect_gate.py  test_asset_loader.py  test_boundary.py  test_classify.py  test_contact_metric.py  test_coord_card_warning.py  test_faces.py  test_formfactor_edit.py  test_grip_styles.py  test_hand_build.py  test_mcp_client.py  test_mixed_mesh_morph.py  test_morph.py  test_morph_laplacian.py  test_pipeline_mcp.py  test_rbf_rotation.py  test_real_k.py  test_socket_backend.py  test_surface.py  test_surface_stl.py
tests/fixtures/: make_phone_k.py
